renesas/ra8: fix config

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -367,6 +367,11 @@ config ARCH_CHIP_RA4
 	---help---
 		Renesas RA4 Architecture (ARM Cortex-M4F/M33).
 
+config ARCH_CHIP_RA8
+	bool "Renesas RA8"
+	---help---
+		Renesas RA8 Architecture (ARM Cortex-M85).
+
 config ARCH_CHIP_RP2040
 	bool "Raspberry Pi RP2040"
 	select ARCH_CORTEXM0
@@ -1177,7 +1182,8 @@ config ARCH_CHIP
 	default "nrf53"		if ARCH_CHIP_NRF53
 	default "nrf91"		if ARCH_CHIP_NRF91
 	default "nuc1xx"	if ARCH_CHIP_NUC1XX
-	default "ra4"			if ARCH_CHIP_RA4
+	default "ra4"		if ARCH_CHIP_RA4
+	default "ra8"		if ARCH_CHIP_RA8
 	default "rp2040"	if ARCH_CHIP_RP2040
 	default "rp23xx"	if ARCH_CHIP_RP23XX
 	default "s32k1xx"	if ARCH_CHIP_S32K1XX
@@ -1642,6 +1648,9 @@ source "arch/arm/src/nuc1xx/Kconfig"
 endif
 if ARCH_CHIP_RA4
 source "arch/arm/src/ra4/Kconfig"
+endif
+if ARCH_CHIP_RA8
+source "arch/arm/src/ra8/Kconfig"
 endif
 if ARCH_CHIP_RP2040
 source "arch/arm/src/rp2040/Kconfig"
