--- a/boards/arm/ra8/fpb-ra8e1/src/CMakeLists.txt
+++ b/boards/arm/ra8/fpb-ra8e1/src/CMakeLists.txt
@@ -26,23 +26,23 @@ else()
   list(APPEND SRCS ra8e1_user_leds.c)
 endif()
 
-if(CONFIG_RA8E1_ADC_BMS_DEMO OR CONFIG_BATTERY_BMS_ADC)
+if(CONFIG_RA8E1_ADC_BMS_DEMO)
   list(APPEND SRCS ra8e1_adc_bms_demo.c)
 endif()
 
-if(CONFIG_RA8_CODE_FLASH)
+if(CONFIG_RA8E1_CODE_FLASH_DEMO)
   list(APPEND SRCS ra8e1_code_flash_demo.c)
 endif()
 
-if(CONFIG_RA8_DATA_FLASH)
+if(CONFIG_RA_DATA_FLASH_DEMO)
   list(APPEND SRCS ra8e1_data_flash_demo.c)
 endif()
 
-if(CONFIG_PWM)
+if(CONFIG_RA8E1_PWM_ESCS_DEMO)
   list(APPEND SRCS ra8e1_escs_demo.c)
 endif()
 
-if(CONFIG_RA8_SCI_UART)
+if(CONFIG_RA_SCI_UART)
   list(APPEND SRCS ra8e1_uart.c)
 endif()
 
@@ -54,7 +54,7 @@ if(CONFIG_RA8E1_SBUS_DEMO)
   list(APPEND SRCS ra8e1_sbus_demo.c)
 endif()
 
-if(CONFIG_RA8_I2C)
+if(CONFIG_RA_I2C)
   list(APPEND SRCS ra8e1_i2c_gy912_demo.c)
 endif()
 
@@ -70,28 +70,28 @@ if(CONFIG_RA8E1_I2C_ACCEL_DEMO)
   list(APPEND SRCS ra8e1_i2c_acc_demo.c)
 endif()
 
-if(CONFIG_RA8E1_PWM_DEMO OR CONFIG_PWM)
+if(CONFIG_RA8E1_PWM_DEMO)
   list(APPEND SRCS ra8e1_escs_demo.c)
 endif()
 
-if(CONFIG_RA8E1_DATA_FLASH_DEMO OR CONFIG_RA8_DATA_FLASH)
+if(CONFIG_RA8E1_DATA_FLASH_DEMO)
   list(APPEND SRCS ra8e1_data_flash_demo.c)
 endif()
 
-if(CONFIG_RA8E1_CODE_FLASH_DEMO OR CONFIG_RA8_CODE_FLASH)
+if(CONFIG_RA8E1_CODE_FLASH_DEMO)
   list(APPEND SRCS ra8e1_code_flash_demo.c)
 endif()
 
-if(CONFIG_RA8_SPI)
+if(CONFIG_RA_SPI)
   list(APPEND SRCS ra8e1_spi.c)
 endif()
 
-if(CONFIG_RA8_SPI_LOOPBACK_DEMO)
+if(CONFIG_RA8E1_SPI_LOOPBACK_DEMO)
   list(APPEND SRCS ra8e1_spi_loopback_demo.c)
 endif()
 
-if(CONFIG_RA8E1_SPI_GY912_DEMO OR CONFIG_RA8_SPI_GY912)
-  list(APPEND SRCS gy912_spi_demo.c)
+if(CONFIG_RA8E1_SPI_GY912_DEMO)
+  list(APPEND SRCS ra8e1_spi_gy912_demo.c)
 endif()
 
 if(CONFIG_RA8_SW_BUTTON)
